<resources>
    <string name="app_name">QPNetMonitor</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="about_text">This application allows monitoring QPNet simulation from your android phone</string>
    <string name="back">Back</string>
    <string name="instruction">Usage</string>
    <string name="author_name">Popov S.M.</string>
    <string name="author_group">IKBO-28-21</string>
    <string name="dev_year" translatable="false">2023</string>
    <string name="author_mail" translatable="false">cookieposter@bk.ru</string>
    <string name="but_selector">Select Model</string>
    <string name="but_author">Author</string>
    <string name="but_about">About</string>
    <string name="but_logout">Logout</string>
    <string name="text_menu">Menu</string>
    <string name="welcome_toast">Welcome, %1$s!</string>
    <string name="but_start">Start</string>
    <string name="but_stop">Stop</string>
    <string name="instruction_text">Instruction</string>
    <string name="but_login">Login</string>
    <string name="channel_name">QPNetMonitor</string>
    <string name="channel_description">QPNetMonitor</string>
    <string name="welcome_notification">We have an instruction!</string>
    <string name="welcome_notification_title">Instruction!</string>
</resources>