<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Button
            android:text="@string/but_selector"
            android:layout_width="200dp"
            android:layout_height="80dp" android:id="@+id/butSelModel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp" app:layout_constraintTop_toBottomOf="@+id/textMenu"
            app:layout_constraintVertical_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/butAbout"/>
    <Button
            android:text="@string/but_about"
            android:layout_width="200dp"
            android:layout_height="80dp" android:id="@+id/butAbout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp" app:layout_constraintTop_toBottomOf="@+id/butSelModel"
            app:layout_constraintVertical_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/butAuthor"/>
    <Button
            android:text="@string/but_author"
            android:layout_width="200dp"
            android:layout_height="80dp" android:id="@+id/butAuthor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp" app:layout_constraintTop_toBottomOf="@+id/butAbout"
            app:layout_constraintVertical_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/butLogout"/>
    <Button
            android:text="@string/but_logout"
            android:layout_width="200dp"
            android:layout_height="80dp" android:id="@+id/butLogout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/butAuthor"
            app:layout_constraintVertical_bias="0.5"/>
    <TextView
            android:text="@string/text_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textMenu"
            android:textSize="48sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/butSelModel"/>
</androidx.constraintlayout.widget.ConstraintLayout>