<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="369dp"
            android:layout_height="471dp"
            tools:layout_editor_absoluteY="92dp"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/fragment_simulation_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <Button
            android:text="@string/but_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            tools:layout_editor_absoluteY="646dp"
            app:layout_constraintStart_toEndOf="@+id/button2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/butBack8"/>
    <Button
            android:text="@string/but_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            tools:layout_editor_absoluteY="646dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button"/>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butBack8" tools:layout_editor_absoluteY="646dp"
            app:layout_constraintStart_toEndOf="@+id/button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>