<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.main.fragment.info.AboutFragment"
                                                   android:id="@+id/aboutLayout">
    <TextView
            android:text="@string/about_text"
            android:layout_width="348dp"
            android:layout_height="90dp" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="24sp" android:textAlignment="center"/>
    <Button
            android:text="@string/back"
            android:layout_width="139dp"
            android:layout_height="63dp" android:id="@+id/butBack2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/butUsage"/>
    <Button
            android:text="@string/instruction"
            android:layout_width="139dp"
            android:layout_height="63dp" android:id="@+id/butUsage"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>